[package]
name = "secret-dungeon-rs-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
reqwest = {version = "*", features = ["json", "blocking"]}
serde = {version = "*", features = ["derive"]}
bevy_rapier2d = {version = "*", features = ["debug-render-2d"]}
dotenv = "*"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# 최신 릴리즈 사용(불안정)
# [toolchain]
# channel = "nightly"